// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Form > appends custom className 1`] = `
<DocumentFragment>
  <fieldset
    class="space-y-8 extra-class"
  />
</DocumentFragment>
`;

exports[`Form > renders contents properly 1`] = `
<DocumentFragment>
  <fieldset
    class="space-y-8"
  >
    contents
  </fieldset>
</DocumentFragment>
`;
